--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
             <a class="navbar-brand" href="<%= new_user_path %>">Sign up</a>
             <a class="navbar-brand" href="<%= signin_path %>">Sign in</a>
             <a class="navbar-brand" href="<%= signout_path %>">Log Out</a>
+            <a class="navbar-brand" href="<%= new_attraction_path %>">New Attraction</a>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
