--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,3 +1,9 @@
-<% @attractions.each do |attraction| %>
-  <%= link_to "Go on #{attraction.name}", attraction_path(attraction) %><br>
+<% if @user.admin != true %>
+  <% @attractions.each do |attraction| %>
+    <%= link_to "Go on #{attraction.name}", attraction_path(attraction) %><br>
+  <% end %>
+<% else %>
+  <% @attractions.each do |attraction| %>
+    <%= link_to "Show #{attraction.name}", attraction_path(attraction) %><br>
+  <% end %>
 <% end %>
